@@ -59,4 +59,11 @@ class CLI:
                     s = n.allocateSpecificNetwork(self.commands[3], self.commands[5])
                     return io.BytesIO(s.encode("utf-8"))
 
+        if self.commands[1] == "deallocate":
+            if self.commands[2] == "-g":
+                if len(self.commands) > 5 and self.commands[4] == "-n":
+                    n = networks.Networks()
+                    s = n.deallocateSpecificNetwork(self.commands[3], self.commands[5])
+                    return io.BytesIO(s.encode("utf-8"))
+
         return None
